# stem-vlm

./: .gitignore  README.md  main.py  pyproject.toml
configs/: baseline.yaml  judge.yaml  train_qwen2_vl_2b.yaml  train_qwen2_vl_7b.yaml
data/: data_utils.py  download.py  preprocess.py
evaluation/: judge.py
experiments/baselines/: config_20251104_174914.yaml  mathverse_predictions_20251104_174914.json
notebooks/: baseline_colab.ipynb
scripts/: compare_models.py  evaluate.py  run_baseline.py  run_inference.py  train.py  upload_to_hf.py
