[project]
name = "stem-vlm"
version = "0.1.0"
description = "STEM Vision-Language Model Evaluation and Fine-tuning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.26.0",
    "qwen-vl-utils>=0.0.2",
    "datasets>=2.16.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "openai>=2.7.1",
    "wandb>=0.22.3",
    "unsloth>=2024.8",
    "trl>=0.24.0",
    "peft>=0.17.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.4.0",
]
